infrastructure/argocd/networkpolicy-pipeline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-pipeline-projects
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          manuela-role: pipeline
  podSelector: {}
  policyTypes:
  - Ingress
